# DeePCtools

./: .gitignore  LICENSE  README.md  Test.ipynb  tutorial.py
deepctools/: DeePCtools.py  __init__.py  util.py
package for pypi/deepctools_pypi/: .pypirc  README.md  pyproject.toml
package for pypi/deepctools_pypi/src/deepctools/: DeePCtools.py  Modeltools.py  util.py
package for pypi/deepctools_pypi/tests/: tutorial.py
